Add dynamic date script for pricing buttons

--- a/public/index.html
+++ b/public/index.html
@@ -543,6 +543,7 @@ if (typeof window !== "undefined") {
 
         })()
     </script>
+    <script src="/dynamic-dates.js"></script>
     <!-- Start of bodyEnd -->
     
     <!-- End of bodyEnd -->
